[build-system]
requires = ["setuptools>=75.0", "build>=1.2.1", "wheel>=0.44"]
build-backend = "setuptools.build_meta"

[tool.flake8]
# OPTIONAL - BCP selection
# select = ["C", "E", "F", "W", "B", "B950"]
# CEP-7 specific
extend-select = ["D", "E"]
# OPTIONAL - BCP Ignore specific warnings and errors according to CEP-8 style
# ignore = ["W191", "W391", "E117"]
# Ignore specific warnings and errors according to CEP-7 style
extend-ignore = ["E117", "D203", "D208", "D212"]
# REQUIRED CEP-7 Custom Exceptions:
#    E117,  # Over-indented - RECOMMENDED
#    D208,  # Docstring is over-indented - CEP-7
#    D203,  # 1 blank line required before class docstring - CEP-7
#    D212,  # Multi-line docstring summary should start at the first line - CEP-7
# OPTIONAL - BCP Ignore long lines as specified in CEP-8
max-line-length = 100
docstring-convention = "google"

[tool.pytest]
testpaths = "tests"
python_files = "test_*.py"

[tool.pytest.markers]
mat = "minimum acceptance tests"
mat_basic = "basic component tests"
mat_doctests = "documentation tests"
mat_say = "send.py focused tests"
mat_hear = "recv.py and hear.py focused tests"
mat_usage = "__main__.py and API tests"
mat_build = "build and packaging tests"
mat_bootstrap = "init/exceptions/env/skt tests"
extra = "additional important tests"
extra_coverage = "coverage-focused tests"
extra_linting = "linting tests"
extra_security = "security tests"
fuzzing = "fuzzing tests"
fuzzing_basic = "smaller sub-set of fuzzing tests"
performance = "performance and scalability tests"

[tool.pytest.enabler.flake8]
addopts = "--flake8"

[tool.pytest.enabler.doctest]
addopts = "--doctest-glob=**/*.py --doctest-modules"

[tool.pytest.enabler.cov]
addopts = "--cov=. --cov-append --cov-report=xml --junitxml=test-reports/junit.xml"
