[metadata]
name = multicast
version = 1.3.0
author = Mr. Walls
author_email = reactive-firewall@users.noreply.github.com
summary = Python Multicast Repo for Send/Recv Stubs.
description_file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://github.com/reactive-firewall/multicast
download_url = https://github.com/reactive-firewall/multicast.git
license = MIT
license_file = LICENSE.md
license_files =
  LICENSE[.md]*
platform = any
project_urls =
  Bug Tracker = https://github.com/reactive-firewall/multicast/issues
  Changelog = https://github.com/althonos/{name}/blob/master/CHANGELOG.md

[bdist_rpm]
url = https://github.com/reactive-firewall/multicast.git

[bdist_wheel]
universal=1

[options]
zip_safe = false
py_modules = multicast
test_suite = tests
python_requires = >=3.7, !=3.11.*
setup_requires =
  setuptools>=38.3,
  wheel
scripts =
  multicast/__main__.py
packages = find:


[options.packages.find]
include =
    multicast
exclude =
    tests
