[metadata]
name = multicast
version = 1.4.2
author = Mr. Walls
author_email = reactive-firewall@users.noreply.github.com
description = Python Multicast Repo for Send/Recv Stubs.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/reactive-firewall/multicast
download_url = https://github.com/reactive-firewall/multicast.git
classifiers =
	Intended Audience :: Developers
	Operating System :: MacOS :: MacOS X
	Operating System :: POSIX :: Linux
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Network
license = MIT
license_files =
  LICENSE[.md]*

platform = any
project_urls =
  Bug Tracker = https://github.com/reactive-firewall/multicast/issues
  License = https://github.com/reactive-firewall/multicast/LICENSE

[bdist_rpm]
url = https://github.com/reactive-firewall/multicast.git

[bdist_wheel]
universal=1

[options]
zip_safe = false
py_modules = multicast
test_suite = tests
python_requires = >=3.7, !=3.12.*
setup_requires =
	setuptools>=45.0.0
	wheel>=0.37.0

scripts =
  multicast/__main__.py
  setup.py
packages = find:


[options.packages.find]
where =
	multicast/
	tests/
	*.py
include =
	multicast
exclude =
	tests

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-flake8
	pytest-cov; \
		# coverage seems to make PyPy extremely slow
		python_implementation != "PyPy"
	pytest-enabler >= 1.0.1


	# local
	flake8 >= 5.0
	virtualenv>=15.0.1
	wheel>=0.37.0
	pip>=21.0
