[metadata]
name = multicast
version = 2.0.4-rc-3
author = Mr. Walls
author_email = reactive-firewall@users.noreply.github.com
description = Multicast Python Module for Send/Recv Stubs.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/reactive-firewall/multicast
download_url = https://github.com/reactive-firewall/multicast.git
classifiers =
  Intended Audience :: Developers
  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX :: Linux
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.13
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3 :: Only
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: System :: Networking
license = MIT
license_files =
  LICENSE.md

platform = any
project_urls =
  "Bug Tracker" = https://github.com/reactive-firewall/multicast/issues
  License = https://github.com/reactive-firewall/multicast/LICENSE.md
  Documentation = https://reactive-firewallmulticast.readthedocs.io/en/stable
  Repository = https://github.com/reactive-firewall/multicast.git

[bdist_rpm]
url = https://github.com/reactive-firewall/multicast.git

[bdist_wheel]
universal=0

[options]
zip_safe = false
py_modules = multicast
test_suite = tests
python_requires = >=3.9.20, !=3.14.*
setup_requires =
  setuptools>=75.0.0
  wheel>=0.44.0
  build>=1.2.1

scripts =
  multicast/__main__.py
packages = find:


[options.packages.find]
where =
  multicast/
  tests/
  *.py
include =
  exceptions
  env
  hear
  recv
  send
  skt
  __main__
exclude =
  docs
  tests

[options.extras_require]
testing =
  # upstream
  pytest >= 7.4
  pytest-checkdocs >= 2.4
  pytest-flake8 >= 1.0.7
  coverage >= 7
  pytest-enabler >= 1.0.1
  # local
  flake8 >= 5.0
  virtualenv >= 20.26.5
  wheel >= 0.44.0
  pip >= 24.3.1
  pytest-cov >= 4.0.0; \
    # coverage seems to make PyPy extremely slow
    python_implementation != "PyPy"

[tool:pytest]
addopts = --doctest-glob=**/*.py --doctest-modules --cov=  --cov-append --cov-report=xml
